# number_theory_project

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTACT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
docs/: diophantine_equations.md  elliptic_curves.md  factorization_algorithms.md  ml_number_theory.md  new_crypto_algorithms.md  prime_distribution.md  quantum_computing_and_number_theory.md  theory_of_numbers.md
src/: diophantine.rs  elliptic_curve.rs  factorization.rs  fields.rs  lib.rs  main.rs
src/factory/: curve_factory.rs  mod.rs
src/ml/: mod.rs  prediction.rs
src/observer/: computation_observer.rs  mod.rs
src/plugins/: mod.rs  sample_plugin.rs
src/strategy/: factorization_strategy.rs  mod.rs
src/tests/: diophantine_tests.rs  elliptic_curve_tests.rs  factorization_tests.rs  ffi_tests.rs  mod.rs  performance_tests.rs  simd_tests.rs
src/utils/: c_code.c  ffi.rs  mod.rs  simd_optimization.rs
